[package]
name = "shred-consumer"
version = "0.1.0"
edition = "2021"

# NOTE: solana-* versions should roughly match the cluster the proxy serves.
# Pin to a current 2.x at build time; bump if bincode deserialize of Entry fails.
[dependencies]
tonic = "0.12"
prost = "0.13"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net"] }
bincode = "1.3"
anyhow = "1"
solana-entry = "2.2"
solana-sdk = "2.2"
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
base64 = "0.22"
serde_json = "1"

[build-dependencies]
tonic-build = "0.12"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
