[package]
name = "tpu-send"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tpu-send"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "net"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
serde_json = "1"
base64 = "0.22"
bs58 = "0.5"
bincode = "1.3"
solana-sdk = "2.3"
quinn = "0.11"
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
solana-tls-utils = "2.3"
solana-quic-definitions = "2.3"

[profile.release]
opt-level = 2
